--- a/css/style_full.css
+++ b/css/style_full.css
@@ -7,9 +7,13 @@ body {
 	padding: 1em;
 }
 
+h1 {
+	text-align: center;
+}
+
 table {
 	border-collapse: collapse;
-	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .25);
+	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
 	color: white;
 }
 
@@ -25,7 +29,7 @@ tr:nth-child(odd) {
 	background: #272727;
 }
 
-td, .extinfo-error {
+td, th, .extinfo-error {
 	padding: 0.4em 0.5em;
 }
 
@@ -35,12 +39,12 @@ td[id$='description'] {
 }
 
 td:focus {
-	background: rgba(0,0,0,.1);
+	background: rgba(0, 0, 0, 0.1);
 	outline: none;
 	box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.5);
 }
 
-td::selection, td > span::selection {
+td::selection, th::selection, td > span::selection {
 	background: #fac92a;
 }
 
@@ -102,4 +106,25 @@ code {
 
 .extinfo-error p {
 	margin: 0;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.width-100 {
+	width: 100%;
+}
+
+.table-fixed {
+	display: table;
+	table-layout: fixed;
+}
+
+.table-cell {
+	display: table-cell;
+}
+
+.transparent {
+	background: transparent;
 }
